--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
           </div>
           <div class="swiper-slide slider__item product-card">
             <picture>
-              <source type="image/webp" srcset="img/Замок рендер.jpg 1x, img/Замок рендер.jpg 2x">
-              <source type="image/jpeg" srcset="img/Замок рендер.jpg 1x, img/Замок рендер.jpg 2x"><img
-                class="product-card__image" src="img/Замок рендер.jpg" alt="Замок" width="200" height="300">
+              <source type="image/webp" srcset="img/Замок_рендер.jpg 1x, img/Замок_рендер.jpg 2x">
+              <source type="image/jpeg" srcset="img/Замок_рендер.jpg 1x, img/Замок_рендер.jpg 2x"><img
+                class="product-card__image" src="img/Замок_рендер.jpg" alt="Замок" width="200" height="300">
             </picture>
             <h3 class="product-card__title">Замок</h3>
              <a class="product-card__link" href="card.html"
@@ -179,9 +179,8 @@
           </div>
           <div class="swiper-slide slider__item product-card">
             <picture>
-              <source type="image/webp" srcset="img/Локация с естественным освещением.jpg 1x, img/Локация с естественным освещением.jpg 2x">
-              <source type="image/jpeg" srcset="img/Локация с естественным освещением.jpg 1x, img/Локация с естественным освещением.jpg 2x"><img
-                class="product-card__image" src="img/Локация с естественным освещением.jpg" alt="Локация" width="200" height="300">
+              <source type="image/webp" srcset="img/Локация_с_естественным_освещением.jpg 1x, img/Локация_с_естественным_освещением.jpg 2x">
+              <source type="image/jpeg" srcset="img/Локация_с_естественным_освещением.jpg 1x, img/Локация_с_естественным_освещением.jpg 2x"><img class="product-card__image" src="img/Локация_с_естественным_освещением.jpg" alt="Локация" width="200" height="300">
             </picture>
             <h3 class="product-card__title">Локация</h3>
              <a class="product-card__link" href="#"
@@ -205,15 +204,14 @@
     <section class="main__block banner">
       <div class="banner__content">
         <picture>
-          <source type="image/webp" media="(min-width: 1200px)" srcset="img/Домик.png 1x, img/Домик.png 2x">
-          <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/Домик.png 1x, img/Домик.png 2x">
+          <source type="image/webp" media="(min-width: 1200px)" srcset="img/домик.png 1x, img/домик.png 2x">
+          <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/домик.png 1x, img/домик.png 2x">
           <source type="image/webp" media="(min-width: 768px)"
-            srcset="img/Домик.png 1x, img/Домик.png 2x">
+            srcset="img/домик.png 1x, img/домик.png 2x">
           <source type="image/jpeg" media="(min-width: 768px)"
-            srcset="img/Домик.png 1x, img/Домик.png 2x">
-          <source type="image/webp" srcset="img/Домик.png 1x, img/Домик.png 2x">
-          <source type="image/jpeg" srcset="img/Домик.png 1x, img/Домик.png 2x"><img
-            class="promo-card__image-dom" src="img/Домик.png" width="200" height="500" alt="Перейти к работам">
+            srcset="img/домик.png 1x, img/домик.png 2x">
+          <source type="image/webp" srcset="img/домик.png 1x, img/домик.png 2x">
+          <source type="image/jpeg" srcset="img/домик.png 1x, img/домик.png 2x"><img class="promo-card__image-dom" src="img/домик.png" width="200" height="500" alt="Перейти к работам">
         </picture>
       <div class="my_skills">
         <h2 class="banner__title">Мои навыки</h2>
@@ -233,7 +231,7 @@
           <source type="image/jpeg" media="(max-width: 767px)" srcset="img/лого.png 1x, img/лого.png 2x">
           <source type="image/webp" media="(max-width: 1199px)" srcset="img/лого.png 1x, img/лого.png 2x">
           <source type="image/jpeg" media="(max-width: 1199px)" srcset="img/лого.png 1x, img/лого.png 2x">
-          <source type="image/webp" srcset="img/лого.png 1x, img/лого.png 2x"><img class="individual__image" srcset="img/лого.png 1x, img/лого.png 2x" width="451" height="670" alt="3д">
+          <source type="image/webp" srcset="img/лого.png 1x, img/лого.png 2x"><img class="individual__image" src="img/лого.png" width="451" height="670" alt="3д">
         </picture>
       </div>
     </section>
@@ -252,6 +250,7 @@
             </li>
           </ul>
         </div>
+      </div>
     </section>
   </main>
   <footer class="footer">
