--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <section class="main__block best-sellers">
       <div class="best-sellers__text">
         <h2 class="best-sellers__title">Последние работы</h2>
-        <p class="best-sellers__description">Работы сделанные на занятиях в университете</p><a class="best-sellers__link button" href="#" aria-label="Смотреть все">Смотреть все</a>
+        <p class="best-sellers__description">Работы, выполненные на занятиях в университете</p><a class="best-sellers__link button" href="#" aria-label="Смотреть все">Смотреть все</a>
       </div>
       <div class="best-sellers__slider slider swiper-container">
         <div class="swiper-wrapper slider__wrapper">
